[package]
name = "zapper"
version = "0.1.2"
authors = ["Josh Leverette <coder543@gmail.com>"]
license = "MIT"
description = "lightning fast templating engine"
repository = "https://github.com/coder543/zapper"

# uncomment if doing benchmarks
# otherwise, it just slows down compilation of examples
# [dev-dependencies]
# criterion = "0.2.3"
# handlebars = "0.32.0"
# serde_json = "1.0.16"
# serde_derive = "1.0.43"
# serde = "1.0.43"

[dependencies]
zapper_derive = "0.1.0"

[[bench]]
name = "benchmark"
harness = false
