[package]
name = "zapper"
version = "0.9.1"
authors = ["Josh Leverette <coder543@gmail.com>"]
license = "MIT"
description = "lightning fast templating engine"
repository = "https://github.com/coder543/zapper"
keywords = ["template",]
categories = ["template-engine"]

[features]
default = ["derive", "rayon"]
derive = ["zapper_derive"]

[dependencies]
zapper_derive = { version = "0.9.0", optional = true }
rayon = { version = "1.0.1", optional = true }

[dev-dependencies]
criterion = "0.2.3"
handlebars = "0.32.0"
serde_json = "1.0.16"
serde_derive = "1.0.43"
serde = "1.0.43"

[[bench]]
name = "benchmark"
harness = false
